recipe/styles.css
/* display structure */

/* flexbox */
body,
.navbar,
.main-body,
.blurb,
.instructions {
  display: flex;
}

body,
.blurb,
.instructions {
  flex-direction: column;
}

.blurb, .instructions {
  flex: 1;
}

/* positioning */
input {
  margin-right: 10px;
}

img {
  min-width: 30vw;
  max-width: 100%;
}

.main-body {
  width: auto;
}

.blurb, .instructions {
  margin: 5vw;
  max-width: 40vw;
}

.ingredients {
  width: 100%;
}

.instructions {
  align-items: center;
  margin: 50px;
}

.description,
.ingredients,
.steps,
#credit {
  max-width: 600px;
}

.steps,
.ingredients {
  margin-bottom: 15px;
  padding: 30px;
}

#title {
  margin-left: 10px;
}

#credit {
  margin-top: 10px;
  text-align: center;
}

/* stylings */

body {
  background-color: #d9ff92;
}

h1,
h2,
p,
ol,
ul,
#title {
  color: #a61c00;
  font-family: "Poppins", sans-serif;
}

a {
  color: #476d00;
}

a:hover {
  text-shadow: 0 0 10px #a6ff00;
  color: #ffc300;
}

a:visited {
  color: #a61c00;
}

.navbar,
.steps,
.ingredients {
  background-color: #ffc300;
}

.border-bottom {
  border-bottom: thick solid #a6ff00 !important;
}

img,
.steps,
.ingredients {
  border: thick solid #a6ff00;
  border-radius: 10px;
}

.checked {
  text-decoration: line-through;
}

/* mobile display structure */

@media only screen and (max-width: 600px) {
  /* flexbox */
  .main-body {
    flex-direction: column;
  }

  .main-body {
    align-items: center;
  }

  .navbar {
    justify-content: center;
  }

  /* positioning */
  body,
  .main-body {
    width: 100vw;
  }

  img,
  .description,
  .blurb,
  .ingredients,
  .steps,
  #credit {
    width: 75vw;
  }

  .blurb,
  .instructions {
    margin: 25px;
    margin-bottom: 0;
  }
}

